# pyschism

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  setup.cfg  setup.py  template.json  tvd_prop.py
.github/workflows/: build.yml  release.yml  test.yml
docker/: arch-linux-base.Dockerfile  docker-compose.yml  pyschism-arch-unittest.Dockerfile
docs/: .buildinfo  Makefile  genindex.html  index.html  modules.rst  objects.inv  py-modindex.html  pyschism.cmd.bootstrap.rst  pyschism.cmd.fgrid.rst  pyschism.cmd.rst  pyschism.forcing.bctides.rst  pyschism.forcing.hycom.rst  pyschism.forcing.nws.nws2.rst  pyschism.forcing.nws.rst  pyschism.forcing.rst  pyschism.forcing.source_sink.rst  pyschism.mesh.parsers.rst  pyschism.mesh.rst  pyschism.outputs.rst  pyschism.param.rst  pyschism.rst  pyschism.server.rst  pyschism.utils.rst  quickstart.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  quickstart.doctree
docs/_sources/: index.rst.txt
docs/api/: _pyschism.cmd.html  driver.html  (+15 more)
pyschism/: __init__.py  __main__.py  bash.py  dates.py  domain.py  driver.py  enums.py  fgrid.py  forcing.py  gr3.py  hgrid.py  hotstart.py  logger.py  makefile.py  mesh.py  model.py  stations.py  vgrid.py
tests/: NGEN_README  _test_driver_baroclinic.py  hgrid.py  test_barotropic.py  test_bctides.py  test_driver.py  test_driver_baroclinic.py  test_driver_barotropic.py  test_hgrid.py  test_icogs.py  test_nwm.py  test_outputs_api.py  test_outputs_api_2.py  test_param_ncor.py  test_paramwind.py  tropycal.ipynb
(+294 files in other folders)
