[metadata]
name = pyschism
version = 0.0.0
author = "Jaime Calzada, Joseph Zhang"
author_email = Jaime.Calzada@noaa.gov
description = Python package for working with SCHISM input and output files.
long_description = file: README.md
license = GPL
url = https://github.com/schism-dev/pyschism.git

[nosetests]
exe = True
tests = tests/

[mypy]
plugins = sqlmypy
