[metadata]
name = pyschism
author = "SCHISM development group"
author_email = jreniel@gmail.com
description = Python package for working with SCHISM input and output files.
long_description = file: README.md
license = "Apache 2.0"
url = https://github.com/schism-dev/pyschism.git

[nosetests]
exe = True
tests = tests/

[mypy]
plugins = sqlmypy
